Fix vertical stretch and mobile layout.

--- a/src/scss/container.scss
+++ b/src/scss/container.scss
@@ -7,6 +7,9 @@
 			.webchat-content,
 			.webchat-closed-content {
 				order: 3;
+
+				display: flex;
+				flex-direction: column-reverse;
 			}
 
 			.webchat-editor {
